syntax = "proto3";

import "google/protobuf/empty.proto";

package com.vaderspb.worker.proto;

option java_multiple_files = true;


service GameInterface {
  rpc VideoChannel(stream VideoSettings) returns (stream VideoFrame) {}

  rpc ControlChannel(stream ControlRequest) returns (google.protobuf.Empty) {}
}

service AdminInterface {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message VideoSettings {
  VideoQuality quality = 1;
}

enum VideoQuality {
  LOW = 0;
  MEDIUM = 1;
  HIGH = 2;
}

message VideoFrame {
  VideoFrameType type = 1;
  bytes data = 2;
}

enum VideoFrameType {
  INIT = 0;
  DATA = 1;
}

enum ControlJoystick {
  JOYSTICK1 = 0;
  JOYSTICK2 = 1;
}

enum ControlState {
  PRESSED = 0;
  RELEASED = 1;
}

enum ControlButton {
    UP = 0;
    DOWN = 1;
    LEFT = 2;
    RIGHT = 3;
    A = 4;
    B = 5;
    SELECT = 6;
    START = 7;
}

message ControlRequest {
  ControlJoystick controllerId = 1;
  ControlState state = 2;
  ControlButton button = 3;
}
